Fix collapsable padding

--- a/assets/sass/_pages.scss
+++ b/assets/sass/_pages.scss
@@ -179,7 +179,7 @@
 
     li {
       border: #CCC 1px solid !important;
-      padding: 0.5rem;
+      padding: 0.5rem 0.7rem;
       border-radius: 5px;
       margin-bottom: 0.5rem;
 
